ci: only upload to release, when it was a release
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/buildtrain.yml
+++ b/.github/workflows/buildtrain.yml
@@ -342,6 +342,7 @@ jobs:
           path: build/${{ env.IMAGE }}.sha256
 
       - name: "📋 Upload to Release"
+        if: ${{ github.event.inputs.release == 'true' }}
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
