--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,15 +83,14 @@ jobs:
 
       - name: "🛠 Generate matrix from config.yml"
         id: create-matrix
+        shell: python
         run: |
-          python3 - <<'EOF'
           import os, yaml, json
           with open("config.yml", "r") as f:
               config = yaml.safe_load(f)
           matrix = {"include": config}
           with open(os.environ["GITHUB_OUTPUT"], "a") as fh:
               print(f"matrix={json.dumps(matrix)}", file=fh)
-          EOF
 
   build:
     needs: [ prepare-release, generate-matrix ]
@@ -177,9 +176,9 @@ jobs:
           fi
 
       - name: "📇 Generate config.local"
+        shell: python
         run: |
-          echo "Generating config.local file..."
-          python3 - <<'EOF'
+          print("Generating config.local file...")
           import os, json
           env_vars = json.loads(os.environ.get("MATRIX_ENV", "{}"))
           with open("config.local", "w") as f:
@@ -187,7 +186,6 @@ jobs:
                   if not key.startswith("EDITBASE_"):
                       key = "EDITBASE_" + key
                   f.write(f"{key}={value}\n")
-          EOF
         env:
           MATRIX_ENV: ${{ toJson(matrix.env) }}
 
@@ -242,8 +240,8 @@ jobs:
 
       - name: "🔧 Generate RPI JSON file"
         if: ${{ matrix.rpi_json != null }}
+        shell: python
         run: |
-          python3 - <<'EOF'
           import json, os
           from datetime import datetime
 
@@ -272,7 +270,6 @@ jobs:
           with open(json_path, 'w') as f:
               json.dump(rpi_data, f, indent=2)
               print("Generated JSON file for ${{ env.IMAGE }}.json")
-          EOF
 
       - name: "📋 Upload to Release"
         env:
