--- a/.github/workflow_config.yml
+++ b/.github/workflow_config.yml
@@ -20,7 +20,7 @@ buildtest:
   # - armbian/orangepi3lts
   # - armbian/orangepi4lts
   - armbian/smartpad
-  - armbian/smartpi
+  #- armbian/smartpi
   # Orange Pi OS based images
   # - orangepi/orangepi_zero2
   # Raspberry Pi OS based images
@@ -37,7 +37,7 @@ release:
   #- armbian/orangepi3lts
   #- armbian/orangepi4lts
   - armbian/smartpad
-  - armbian/smartpi
+  #- armbian/smartpi
   # Orange Pi OS based images
   #- orangepi/orangepi_zero2
   # Raspberry Pi OS based images
