--- a/src/modules/smartpad/filesystem/home/pi/printer_data/config/KlipperScreen.conf
+++ b/src/modules/smartpad/filesystem/home/pi/printer_data/config/KlipperScreen.conf
@@ -1,5 +1,6 @@
 [main]
 theme = material-darker
-screen_blanking = off
 confirm_estop = True
 use_dpms = False
+screen_blanking = 60
+screen_blanking_printing = 60
