--- a/src/modules/usb-automount/config
+++ b/src/modules/usb-automount/config
@@ -11,8 +11,6 @@
 
 # shellcheck disable=all
 
-[[ -n "$SMARTPAD_CONFIG_TXT_FILE" ]] || SMARTPAD_CONFIG_TXT_FILE="/boot/armbianEnv.txt"
 
 
-[[ -n "$SMARTPAD_PLYMOUTH_REPO" ]] || SMARTPAD_PLYMOUTH_REPO="https://github.com/Yumi-Lab/plymouth-themes.git"
-[[ -n "$SMARTPAD_PLYMOUTH_THEME" ]] || SMARTPAD_PLYMOUTH_THEME="hexagon_alt"
+[[ -n "SMARTPAD_GIT_USB_MOUNT" ]] || SMARTPAD_GIT_USB_MOUNT="https://github.com/Maxime3d77/automount-usb-klipper.git"
