--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,7 +88,11 @@ jobs:
           import os, yaml, json
           with open("config.yml", "r") as f:
               config = yaml.safe_load(f)
-          matrix = {"include": config}
+
+          # Filter out build_only configurations for release
+          release_config = [item for item in config if not item.get('build_only', False)]
+
+          matrix = {"include": release_config}
           with open(os.environ["GITHUB_OUTPUT"], "a") as fh:
               print(f"matrix={json.dumps(matrix)}", file=fh)
 
