--- a/config.yml
+++ b/config.yml
@@ -56,6 +56,26 @@
     devices:
       - "opi4-64bit"
 
+- name: armbian-orangepi4_lts-trixie
+  type: armbian
+  build_only: true
+  img_download_url: "https://github.com/mainsail-crew/armbian-builds/releases/latest/download/armbian-orangepi4_lts_trixie.img.xz"
+  img_hash_url: "https://github.com/mainsail-crew/armbian-builds/releases/latest/download/armbian-orangepi4_lts_trixie.img.xz.sha256"
+  env:
+    ARCH: arm64
+    DISTRO: armbian
+    IMAGE_ENLARGEROOT: 5000
+    MOUNT_PROC: 1
+    MOUNT_SYS: 1
+  special_modules:
+    - 20-opi-4lts-spi
+  rpi_json:
+    name: "MainsailOS $VERSION$ - Orange Pi 4 LTS (64-bit)"
+    description: "A port of Armbian with preinstalled Klipper/Moonraker/Mainsail for 3D printers"
+    icon: "https://os.mainsail.xyz/rpi-imager.png"
+    devices:
+      - "opi4-64bit"
+
 - name: armbian-orangepi3_lts-bookworm
   type: armbian
   img_download_url: "https://github.com/mainsail-crew/armbian-builds/releases/latest/download/armbian-orangepi3_lts_bookworm.img.xz"
