fix: correct syntax in if condition in copy special modules step
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,7 +99,7 @@ jobs:
           done
 
       - name: "📋 Copy special modules"
-        if: matrix.special_modules && toJson(matrix.special_modules) }}" != "[]"
+        if: matrix.special_modules && toJson(matrix.special_modules) != "[]"
         run: |
           echo "Special modules found for ${{ matrix.name }}: ${{ toJson(matrix.special_modules) }}"
 
