--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -161,7 +161,7 @@ jobs:
           done
 
       - name: "📋 Copy special modules"
-        if: matrix.special_modules
+        if: matrix.special_modules && length(matrix.special_modules) > 0
         run: |
           echo "Special modules found for ${{ matrix.name }}: ${{ toJson(matrix.special_modules) }}"
 
