--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 - name: raspberry_pi-armhf-trixie
   type: raspberry
-  img_download_url: "https://downloads.raspberrypi.org/raspios_arm64/images/raspios_arm64-2025-10-02/2025-10-01-raspios-trixie-arm64.img.xz.torrent"
-  img_hash_url: "https://downloads.raspberrypi.org/raspios_lite_armhf_latest.sha256"
+  img_download_url: "https://downloads.raspberrypi.org/raspios_armhf/images/raspios_armhf-2025-10-02/2025-10-01-raspios-trixie-armhf.img.xz.torrent"
+  img_hash_url: "https://downloads.raspberrypi.org/raspios_armhf/images/raspios_armhf-2025-10-02/2025-10-01-raspios-trixie-armhf.img.xz.sha256"
   env:
     ARCH: armhf
     IMAGE_ENLARGEROOT: 6000
